--- a/config/install/search_api_postgresql.queue_settings.yml
+++ b/config/install/search_api_postgresql.queue_settings.yml
@@ -1,464 +1,10 @@
-# Queue processing configuration schema
-
-search_api_postgresql.queue_settings:
-  type: config_object
-  label: 'Search API PostgreSQL Queue Settings'
-  mapping:
-    enabled:
-      type: boolean
-      label: 'Enable queue processing globally'
-    default_enabled:
-      type: boolean
-      label: 'Enable queue processing by default for new servers'
-    batch_size:
-      type: integer
-      label: 'Default batch size for queue processing'
-    max_processing_time:
-      type: integer
-      label: 'Maximum processing time per queue run (seconds)'
-    priority_levels:
-      type: mapping
-      label: 'Priority level definitions'
-      mapping:
-        high:
-          type: integer
-          label: 'High priority value'
-        normal:
-          type: integer
-          label: 'Normal priority value'
-        low:
-          type: integer
-          label: 'Low priority value'
-    servers:
-      type: sequence
-      label: 'Server-specific queue settings'
-      sequence:
-        type: mapping
-        label: 'Server queue configuration'
-        mapping:
-          enabled:
-            type: boolean
-            label: 'Enable queue processing for this server'
-          batch_size:
-            type: integer
-            label: 'Server-specific batch size'
-          priority:
-            type: string
-            label: 'Default priority for this server'
-          max_items_per_run:
-            type: integer
-            label: 'Maximum items to process per queue run'
-
-search_api_postgresql.queued_embedding:
-  type: config_object
-  label: 'Queued Embedding Service Settings'
-  mapping:
-    enabled:
-      type: boolean
-      label: 'Enable queued embedding processing'
-    default_dimension:
-      type: integer
-      label: 'Default embedding dimension'
-    fallback_to_sync:
-      type: boolean
-      label: 'Fall back to synchronous processing if queue fails'
-    batch_threshold:
-      type: integer
-      label: 'Use batch processing for this many or more items'
-    priority_mapping:
-      type: mapping
-      label: 'Priority mapping for different operation types'
-      mapping:
-        realtime:
-          type: string
-          label: 'Priority for real-time operations'
-        index:
-          type: string
-          label: 'Priority for indexing operations'
-        bulk:
-          type: string
-          label: 'Priority for bulk operations'
-    performance:
-      type: mapping
-      label: 'Performance settings'
-      mapping:
-        max_memory_usage:
-          type: integer
-          label: 'Maximum memory usage per worker (MB)'
-        rate_limit:
-          type: integer
-          label: 'Rate limit for API calls (requests per minute)'
-        timeout:
-          type: integer
-          label: 'Timeout for individual operations (seconds)'
-
-# Updated backend configurations to include queue settings
-search_api.backend.plugin.postgresql:
-  type: mapping
-  label: 'PostgreSQL backend configuration'
-  mapping:
-    connection:
-      type: mapping
-      label: 'Database connection settings'
-      mapping:
-        database:
-          type: string
-          label: 'Database name'
-        host:
-          type: string
-          label: 'Database host'
-        port:
-          type: integer
-          label: 'Database port'
-        username:
-          type: string
-          label: 'Username'
-        password_key:
-          type: string
-          label: 'Password key reference'
-        ssl_mode:
-          type: string
-          label: 'SSL Mode'
-        options:
-          type: sequence
-          label: 'Additional PDO options'
-          sequence:
-            type: string
-    index_prefix:
-      type: string
-      label: 'Index table prefix'
-    fts_configuration:
-      type: string
-      label: 'PostgreSQL FTS configuration'
-    debug:
-      type: boolean
-      label: 'Debug mode'
-    batch_size:
-      type: integer
-      label: 'Indexing batch size'
-    ai_embeddings:
-      type: mapping
-      label: 'AI Text Embeddings Configuration'
-      mapping:
-        enabled:
-          type: boolean
-          label: 'Enable AI text embeddings'
-        hybrid_search:
-          type: boolean
-          label: 'Enable hybrid search (FTS + Vector)'
-        azure_ai:
-          type: mapping
-          label: 'Azure AI Services Configuration'
-          mapping:
-            endpoint:
-              type: string
-              label: 'Azure AI Services endpoint'
-            api_key_name:
-              type: string
-              label: 'API key reference (Key module)'
-            model:
-              type: string
-              label: 'Embedding model'
-            dimensions:
-              type: integer
-              label: 'Vector dimensions'
-            batch_size:
-              type: integer
-              label: 'Embedding batch size'
-        similarity_threshold:
-          type: float
-          label: 'Vector similarity threshold'
-        weight_vector:
-          type: float
-          label: 'Vector search weight in hybrid mode'
-        weight_fulltext:
-          type: float
-          label: 'Full-text search weight in hybrid mode'
-        cache:
-          type: mapping
-          label: 'Embedding cache configuration'
-          mapping:
-            enabled:
-              type: boolean
-              label: 'Enable embedding caching'
-            backend:
-              type: string
-              label: 'Cache backend (database or memory)'
-            ttl:
-              type: integer
-              label: 'Cache TTL in seconds'
-            max_entries:
-              type: integer
-              label: 'Maximum cache entries'
-            compression:
-              type: boolean
-              label: 'Enable cache compression'
-            cleanup_probability:
-              type: float
-              label: 'Cache cleanup probability'
-    queue_processing:
-      type: mapping
-      label: 'Queue Processing Configuration'
-      mapping:
-        enabled:
-          type: boolean
-          label: 'Enable queue-based embedding processing'
-        mode:
-          type: string
-          label: 'Processing mode (queue, sync, hybrid)'
-        batch_threshold:
-          type: integer
-          label: 'Use batch processing for this many or more items'
-        priority:
-          type: string
-          label: 'Default queue priority (high, normal, low)'
-        fallback_to_sync:
-          type: boolean
-          label: 'Fall back to synchronous processing on queue failure'
-        max_queue_time:
-          type: integer
-          label: 'Maximum time to wait for queue processing (seconds)'
-        sync_for_realtime:
-          type: boolean
-          label: 'Use synchronous processing for real-time requests'
-    performance:
-      type: mapping
-      label: 'Performance Optimization Settings'
-      mapping:
-        connection_pooling:
-          type: boolean
-          label: 'Enable database connection pooling'
-        max_connections:
-          type: integer
-          label: 'Maximum number of database connections'
-        query_timeout:
-          type: integer
-          label: 'Database query timeout (seconds)'
-        memory_limit:
-          type: integer
-          label: 'Memory limit per process (MB)'
-        profiling:
-          type: boolean
-          label: 'Enable performance profiling'
-    security:
-      type: mapping
-      label: 'Security Settings'
-      mapping:
-        validate_credentials:
-          type: boolean
-          label: 'Validate credentials on startup'
-        encrypt_cache:
-          type: boolean
-          label: 'Encrypt cached embeddings'
-        audit_logging:
-          type: boolean
-          label: 'Enable audit logging'
-        rate_limiting:
-          type: mapping
-          label: 'Rate limiting settings'
-          mapping:
-            enabled:
-              type: boolean
-              label: 'Enable rate limiting'
-            requests_per_minute:
-              type: integer
-              label: 'Maximum requests per minute'
-            burst_limit:
-              type: integer
-              label: 'Burst limit for rate limiting'
-
-search_api.backend.plugin.postgresql_azure:
-  type: mapping
-  label: 'Azure PostgreSQL backend configuration'
-  mapping:
-    connection:
-      type: mapping
-      label: 'Database connection settings'
-      mapping:
-        database:
-          type: string
-          label: 'Database name'
-        host:
-          type: string
-          label: 'Database host'
-        port:
-          type: integer
-          label: 'Database port'
-        username:
-          type: string
-          label: 'Username'
-        password_key:
-          type: string
-          label: 'Password key reference'
-        ssl_mode:
-          type: string
-          label: 'SSL Mode'
-        options:
-          type: sequence
-          label: 'Additional PDO options'
-          sequence:
-            type: string
-    index_prefix:
-      type: string
-      label: 'Index table prefix'
-    fts_configuration:
-      type: string
-      label: 'PostgreSQL FTS configuration'
-    debug:
-      type: boolean
-      label: 'Debug mode'
-    batch_size:
-      type: integer
-      label: 'Indexing batch size'
-    azure_embedding:
-      type: mapping
-      label: 'Azure AI Embedding Configuration'
-      mapping:
-        enabled:
-          type: boolean
-          label: 'Enable Azure AI vector search'
-        service_type:
-          type: string
-          label: 'Azure AI service type'
-        endpoint:
-          type: string
-          label: 'Azure endpoint'
-        api_key_name:
-          type: string
-          label: 'API key reference (Key module)'
-        deployment_name:
-          type: string
-          label: 'Azure deployment name'
-        api_version:
-          type: string
-          label: 'Azure API version'
-        dimension:
-          type: integer
-          label: 'Vector dimension'
-        model_type:
-          type: string
-          label: 'Embedding model type'
-    vector_index:
-      type: mapping
-      label: 'Vector index configuration'
-      mapping:
-        method:
-          type: string
-          label: 'Vector index method'
-        ivfflat_lists:
-          type: integer
-          label: 'IVFFlat lists parameter'
-        hnsw_m:
-          type: integer
-          label: 'HNSW m parameter'
-        hnsw_ef_construction:
-          type: integer
-          label: 'HNSW ef_construction parameter'
-    hybrid_search:
-      type: mapping
-      label: 'Hybrid search configuration'
-      mapping:
-        text_weight:
-          type: float
-          label: 'Text search weight'
-        vector_weight:
-          type: float
-          label: 'Vector search weight'
-        similarity_threshold:
-          type: float
-          label: 'Similarity threshold'
-        max_vector_results:
-          type: integer
-          label: 'Maximum vector results'
-    azure_optimization:
-      type: mapping
-      label: 'Azure optimization settings'
-      mapping:
-        batch_embedding:
-          type: boolean
-          label: 'Enable batch embedding'
-        batch_size:
-          type: integer
-          label: 'Batch size'
-        retry_attempts:
-          type: integer
-          label: 'Retry attempts'
-        timeout:
-          type: integer
-          label: 'Timeout in seconds'
-        rate_limit_delay:
-          type: integer
-          label: 'Rate limit delay in milliseconds'
-    queue_processing:
-      type: mapping
-      label: 'Queue Processing Configuration'
-      mapping:
-        enabled:
-          type: boolean
-          label: 'Enable queue-based embedding processing'
-        mode:
-          type: string
-          label: 'Processing mode (queue, sync, hybrid)'
-        batch_threshold:
-          type: integer
-          label: 'Use batch processing for this many or more items'
-        priority:
-          type: string
-          label: 'Default queue priority (high, normal, low)'
-        fallback_to_sync:
-          type: boolean
-          label: 'Fall back to synchronous processing on queue failure'
-        azure_optimized:
-          type: boolean
-          label: 'Use Azure-optimized queue processing'
-    cache:
-      type: mapping
-      label: 'Embedding cache configuration'
-      mapping:
-        enabled:
-          type: boolean
-          label: 'Enable embedding caching'
-        backend:
-          type: string
-          label: 'Cache backend (database or memory)'
-        ttl:
-          type: integer
-          label: 'Cache TTL in seconds'
-        max_entries:
-          type: integer
-          label: 'Maximum cache entries'
-        compression:
-          type: boolean
-          label: 'Enable cache compression'
-        cleanup_probability:
-          type: float
-          label: 'Cache cleanup probability'
-        table_name:
-          type: string
-          label: 'Cache table name'
-    performance:
-      type: mapping
-      label: 'Performance Optimization Settings'
-      mapping:
-        connection_pooling:
-          type: boolean
-          label: 'Enable database connection pooling'
-        azure_optimizations:
-          type: boolean
-          label: 'Enable Azure-specific optimizations'
-        query_parallelization:
-          type: boolean
-          label: 'Enable query parallelization'
-        memory_management:
-          type: mapping
-          label: 'Memory management settings'
-          mapping:
-            limit_mb:
-              type: integer
-              label: 'Memory limit per process (MB)'
-            gc_frequency:
-              type: integer
-              label: 'Garbage collection frequency'
-            vector_cache_size:
-              type: integer
-              label: 'Vector cache size (number of vectors)'
+# Default queue processing configuration
+enabled: true
+default_enabled: true
+batch_size: 100
+max_processing_time: 300
+priority_levels:
+  high: 100
+  normal: 50
+  low: 10
+servers: {}
