--- a/search_api_postgresql.services.yml
+++ b/search_api_postgresql.services.yml
@@ -181,6 +181,20 @@ services:
       - '@search_api_postgresql.configuration_validator'
       - '@search_api_postgresql.cache_manager'
       - '@search_api_postgresql.embedding_queue_manager'
+  
+  search_api_postgresql.backend_migration:
+    class: Drupal\search_api_postgresql\Service\BackendMigrationService
+    arguments: 
+      - '@entity_type.manager'
+      - '@messenger'
+      - '@logger.factory'
+  
+  search_api_postgresql.configuration_validation:
+    class: Drupal\search_api_postgresql\Service\ConfigurationValidationService
+    arguments:
+      - '@entity_type.manager'
+      - '@key.repository'
+      - '@logger.factory'
 
 parameters:
   search_api_postgresql.default_batch_size: 50
