--- a/search_api_postgresql.libraries.yml
+++ b/search_api_postgresql.libraries.yml
@@ -5,6 +5,7 @@ admin:
       css/embedding-admin.css: {}
   js:
     js/embedding-admin.js: {}
+    js/search_api_postgresql_admin.js: {}
   dependencies:
     - core/jquery
     - core/drupal
