--- a/search_api_postgresql.services.yml
+++ b/search_api_postgresql.services.yml
@@ -177,6 +177,9 @@ services:
       - '@messenger'
       - '@logger.factory'
 
+  search_api_postgresql.embedding_service:
+    alias: search_api_postgresql.embedding_service.azure_openai
+
 parameters:
   search_api_postgresql.default_batch_size: 50
   search_api_postgresql.max_retries: 3
